[gd_scene load_steps=12 format=3 uid="uid://blxltvb8xes8y"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_4jwkk"]
[ext_resource type="SpriteFrames" uid="uid://t8cc6asnnmcq" path="res://assets/character/enemy.tres" id="2_c5qe4"]
[ext_resource type="PackedScene" uid="uid://b7nknylki6le7" path="res://scenes/enemy_stats.tscn" id="2_hlnr7"]
[ext_resource type="PackedScene" uid="uid://c8rhl1keb567f" path="res://components/interact/hurtbox_component.tscn" id="3_vcm7j"]
[ext_resource type="PackedScene" uid="uid://bghi0jdw8j1t7" path="res://scenes/player_detection_zone.tscn" id="4_k52cx"]
[ext_resource type="PackedScene" uid="uid://cr55mcfp6m8ka" path="res://components/interact/hitbox_component.tscn" id="5_r2qus"]
[ext_resource type="PackedScene" uid="uid://c32aj8l1q8vym" path="res://components/stats/health_component.tscn" id="7_3yprs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v3nhk"]
custom_solver_bias = 1.0
radius = 5.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cgbfh"]
radius = 17.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_as26k"]
radius = 41.0488

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2knnx"]
radius = 14.0
height = 28.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_4jwkk")
ACCELERATION = 100

[node name="EnemyMovements" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_c5qe4")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 9)
shape = SubResource("CapsuleShape2D_v3nhk")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_vcm7j")]
collision_layer = 4
collision_mask = 0
HitByPlayer = true
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-1, 10)
shape = SubResource("CapsuleShape2D_cgbfh")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("4_k52cx")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_as26k")
debug_color = Color(0, 0.694118, 0.701961, 0.027451)

[node name="Hitbox" parent="." instance=ExtResource("5_r2qus")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1, 11)
shape = SubResource("CapsuleShape2D_2knnx")
debug_color = Color(0.919209, 0.283018, 1.92523e-07, 0.42)

[node name="enemy_stats" parent="." instance=ExtResource("2_hlnr7")]
MAX_HEALTH = 3

[node name="HealthComponent" parent="." instance=ExtResource("7_3yprs")]
max_health = 1.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="enemy_stats" to="." method="_on_enemy_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
